[gd_scene load_steps=16 format=3 uid="uid://cb27tfn65nht4"]

[ext_resource type="Script" path="res://Scripts/SplashScreens.gd" id="1_lni8s"]
[ext_resource type="Script" path="res://addons/tnowe_extra_controls/elements/radial_container.gd" id="1_sfw72"]
[ext_resource type="Texture2D" uid="uid://cjnqsa0iyk0s1" path="res://Textures/Splashes/tex_logo_talkhaus.png" id="2_hgk65"]
[ext_resource type="Texture2D" uid="uid://c368i2deyd1hn" path="res://Textures/LoadingSprites/moonwalk.png" id="2_prha8"]
[ext_resource type="Texture2D" uid="uid://f7o5qcky36pv" path="res://Textures/Splashes/tex_logo_spotzone.png" id="3_qxi0y"]
[ext_resource type="Texture2D" uid="uid://cee7rnd601xw2" path="res://Textures/Splashes/tex_logo_asmtserver.png" id="4_rtvxm"]
[ext_resource type="AudioStream" uid="uid://tsluh8mfgrus" path="res://Sounds/sound_whoosh2.ogg" id="6_txut0"]
[ext_resource type="AudioStream" uid="uid://dg4ff5c4b67u5" path="res://Sounds/sound_splashesSwirl.ogg" id="7_5uo3y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yy6bd"]
atlas = ExtResource("2_prha8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c521a"]
atlas = ExtResource("2_prha8")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkyc3"]
atlas = ExtResource("2_prha8")
region = Rect2(0, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fo2e5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy6bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c521a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkyc3")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_k6nbs"]
resource_name = "Intro"
length = 7.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RecordButton:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(256, 160), Vector2(256, -800)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/RadialContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.5, 3, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/RadialContainer:progress_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2, 0, 0),
"points": PackedFloat32Array(-0.5, -0.25, 0, 0.1, 1.19607, 1.29278, -0.350968, -0.0808718, 0.160681, 0.037025, 1.4, -0.172652, -0.0384562, 0.368662, 0.082115, 3.5, -0.161378, -0.686434, 0.25, 0),
"times": PackedFloat32Array(1, 2, 3, 3.75)
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"to_title"
}]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_txut0")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_5uo3y")
}],
"times": PackedFloat32Array(0, 1)
}
tracks/4/use_blend = true
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MarginContainer/Loading:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 5, 5.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MarginContainer/Loading:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RecordButton:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xpjlr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RecordButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(256, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/RadialContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/RadialContainer:progress_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/Loading:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/Loading:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RecordButton:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_so8yr"]
_data = {
"Intro": SubResource("Animation_k6nbs"),
"RESET": SubResource("Animation_xpjlr")
}

[node name="SplashScreens" type="Control" node_paths=PackedStringArray("sequence_player")]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lni8s")
sequence_player = NodePath("AnimationPlayer")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 96
theme_override_constants/margin_bottom = 96

[node name="Loading" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/Loading"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer/Loading/Control"]
texture_filter = 1
position = Vector2(-32, -32)
sprite_frames = SubResource("SpriteFrames_fo2e5")
autoplay = "default"
frame_progress = 0.0158458

[node name="Label" type="Label" parent="MarginContainer/Loading"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Loading..."

[node name="RadialContainer" type="Container" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
script = ExtResource("1_sfw72")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/RadialContainer"]
layout_mode = 2
texture = ExtResource("2_hgk65")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/RadialContainer"]
layout_mode = 2
texture = ExtResource("3_qxi0y")

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/RadialContainer"]
layout_mode = 2
texture = ExtResource("4_rtvxm")

[node name="RecordButton" type="Button" parent="."]
custom_minimum_size = Vector2(640, 328)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -164.0
offset_right = 320.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.5
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "If you're recording or streaming,
click this once everything's set up."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_so8yr")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="RecordButton" to="." method="_on_record_button_mouse_entered"]
[connection signal="pressed" from="RecordButton" to="." method="_on_record_button_pressed"]
